# project-undefined

./: README.md
DicesPalace/: .gitignore  CMakeLists.txt
DicesPalace/data/bosses/: boss2.txt
DicesPalace/data/levels/: level2_map.txt  level3_map.txt
DicesPalace/src/: bosses.cpp  main.cpp  maze.cpp  player.cpp
DicesPalace/src/include/: bosses.h  maze.h
DicesPalace/src/include/levels/: level4.h
DicesPalace/src/include/minigames/: 1_riddles.h  2_spotDifference.h  4_keySmash.h
DicesPalace/src/include/utils/: sounds.h  story.h
DicesPalace/src/levels/: level1.cpp  level2.cpp  level3.cpp  level4.cpp
DicesPalace/src/miniGames/: 1_riddles.cpp  2_spotDifference.cpp  3_numberSort.cpp  4_keySmash.cpp
DicesPalace/src/utils/: consoleUtils.cpp  menu.cpp  sounds.cpp  story.cpp
DidesPalace/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
DidesPalace/data/bosses/: boss2.txt
DidesPalace/data/levels/: level1_map.txt  level2_map.txt  level3_map.txt  level4_map.txt
DidesPalace/include/: Player.h  maze.h
DidesPalace/src/: CMakeCache.txt  Makefile  bosses.cpp  cmake_install.cmake  main.cpp  maze.cpp  menu.cpp  player.cpp
DidesPalace/src/include/: bosses.h  game_manager.h  maze.h  menu.h  player.h
DidesPalace/src/include/levels/: level1.h  level2.h  level3.h  level4.h
DidesPalace/src/include/minigames/: 1_riddles.h  3_numberSort.h  4_keySmash.h
DidesPalace/src/include/utils/: consoleUtils.h  menu.h  sounds.h
DidesPalace/src/levels/: level1.cpp  level2.cpp  level3.cpp  level4.cpp
DidesPalace/src/miniGames/: 1_riddles.cpp  2_spotDifference.cpp  3_numberSort.cpp  4_keySmash.cpp
DidesPalace/src/utils/: consoleUtils.cpp  menu.cpp  sounds.cpp
